# geo_analytics

./: .gitignore  FIXES.md  README.md  db.sqlite3  manage.py  pyproject.toml  requirements.txt
analytics/: urls.py  views.py
analytics/templates/analytics/: index.html  procedures.html
geo_analytics/: asgi.py  settings.py  settingsprod.py  urls.py  wsgi.py
static/analytics/: main.css
